<resources>
    <string name="app_name">FooF</string>
    <string name="title_activity_maps">Home</string>
    <string name="address_word">Address</string>
    <string name="more_details_word">อ่านเพิ่มเติม</string>
    <string name="events_word">Events</string>
    <string name="checkin">Check-in at </string>
    <string name="uncheck">Undo checkin at</string>
    <string name="recent">Recent</string>
    <string name="facebook_app_id">209605959823801</string>
    <string name="place_description_title">Place description</string>
    <string name="place_name_text">Place name</string>
    <string name="add_event_button_des">Add event button</string>
    <string name="your_description_of_this_place">Your description of this place</string>
    <string name="search_for_the_place">Search for the place</string>
    <string name="done">Done !</string>
    <string name="input_map_name_here">input map name here</string>
    <string name="map_name">Map name</string>
    <string name="places_in_this_map">Places in this map</string>
    <string name="add_new_place">+ Add new place</string>
    <string name="place_description_hint">e.g. This is your hometown.</string>
    <string name="place_category">Place category</string>
    <string name="place_name">Place name</string>
    <string name="input_your_place_name">Input your place name</string>
    <string name="show_how_to_use_map">Show How to use map</string>
    <string name="hide_how_to_use_map">Hide How to use map</string>

</resources>
