<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    >

    <LinearLayout

        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/place_name_text"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/place_name_edittext"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <fragment
        android:text="Search for the place"
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <fragment
        android:id="@+id/map_fragment_edit_place"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <LinearLayout

        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/place_description_title"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/place_description_edittext"
            android:layout_width="match_parent"
            android:minLines="4"
            android:maxLines="5"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="start"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/event_list_header"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Events in this place"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/add_event_button"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/add_map"
            android:layout_toRightOf="@+id/event_list_header"
            android:layout_toEndOf="@+id/event_list_header"
            android:contentDescription="@string/add_event_button_des"
            android:onClick="onAddEventButtonClick"
             />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/edit_place_submit_button"
        android:layout_marginTop="30dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/the_app_icon"
        android:onClick="OnEditPlaceSubmitButtonClick"
        />

</LinearLayout>
</ScrollView>